fix overlapping issue

--- a/client/styles.css
+++ b/client/styles.css
@@ -1,21 +1,4 @@
-html, body {
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
 
-#renderCanvas {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-#app {
-  width: 100%;
-  height: 100%;
-  touch-action: none;
-}
 @font-face {
     font-family: "Crackman Font";
     src: url(./assets/crackman.ttf) format("truetype");
@@ -433,7 +416,7 @@ button:active {
     font-family: 'icons';
     src: url('assets/icons.woff');
 }
-
+/*
 html {
   font-family : sans-serif;
 
@@ -443,17 +426,7 @@ html {
   width: 100%;
 
 }
-
-
-html {
-     background-repeat: repeat;
-    /* background-image: ;*/
-    /*background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 14, 177, .75)), url('background.jpg'));*/
-    background:     linear-gradient(
-      rgba(0, 0, 0, 0),
-      rgba(10, 15, 68, .85)
-    ), url('assets/background.jpg');
-}
+*/
 
 .title-container {
     position: fixed;
@@ -903,4 +876,25 @@ a:link {
   padding: 5px;
   color: white;
   background-color: rgba(15, 62, 137, 0.5);
+}
+
+html, body {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#renderCanvas {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+}
+#app {
+  width: 100%;
+  height: 100%;
+  touch-action: none;
 }
